# coding-snacks-google-cloud-run-service-and-job

./: Dockerfile.web  Dockerfile.worker  README.md  pyproject.toml  run_web.py  run_worker.py
.github/workflows/: google-cloudrun-docker.yml
