[project]
name = "cloud-run-poc"
version = "0.1.0"
description = "Proof of Concept for Google Cloud Run Service and Job"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "gunicorn",
    "google-cloud-run",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
